# entrezweb

./: .gitignore  README.md  dotenv-sample  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sequence.fasta.xml  tailwind.config.js  tailwindcss-watch.sh  uwsgi.ini
eweb/: __init__.py
eweb/core/: api.py  celery.py  fields.py  settings.py  urls.py
eweb/core/management/commands/: fetch_record.py
eweb/core/static/src/css/: app.css  app.css.map  input.css  main.css  output.css  packing-slip-theme.css
eweb/core/static/src/js/: app.bundle.js  app.bundle.js.map  app.css  app.css.map  app.js  datepicker.js  debug.js  hyperscript.min.js  sidebar.js  sse.js
eweb/nucleotide/: api.py  apps.py  data.py  forms.py  models.py  tasks.py  urls.py  views.py
eweb/nucleotide/management/commands/: fetch_record_celery.py
eweb/nucleotide/migrations/: 0001_initial.py  0002_alter_nucleotide_seq.py  0003_nucleotide_description_nucleotide_entrez_id_and_more.py  0004_nucleotide_seq_length.py  0005_alter_nucleotide_options_remove_nucleotide_seq_and_more.py  0006_remove_nucleotide_description_remove_nucleotide_name_and_more.py  0007_alter_nucleotide_extra_alter_nucleotide_title.py
eweb/static/CACHE/css/: output.0a19e99b012b.css  output.47ec90f081d4.css
eweb/static/src/: input.css  output.css
eweb/templates/: _base.html  index.html
eweb/templates/includes/: seq-download-progress.html  seq-row.html  seq-table.html
