[project]
name = "entrezweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "biopython>=1.85",
  "django>=5.2.4",
  "django-extensions>=4.1",
  "django-ninja>=1.4.3",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
]

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipython>=9.4.0"]

[project.scripts]
"manage.py" = "eweb:django_manage"
